Fixed font spacing and setup new structure without multiple pages.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 
 :root {
-  --t1: clamp(3rem, calc(7vw + 1rem), 6rem);
+  --t1: clamp(3rem, calc(5vw + 1rem), 4rem);
   --t2: clamp(2rem, calc(4vw + 1rem), 3rem);
   --t3: clamp(1.25rem, calc(2vw + 1rem), 2rem);
-  --par: clamp(1rem, calc(1vw + 1rem), 1.25rem);
+  --par: clamp(0.75rem, calc(0.01vw + 1rem), 1.25rem);
 }
 
 body{
@@ -34,6 +34,7 @@ h3{
 p{
   margin: 0;
   font-size: var(--par);
+  /* font-size: 0.75rem; */
   color: rgb(240, 245, 243);
 }
 
@@ -73,30 +74,68 @@ a{
 #hero{
   width: 100%;
   min-height: 100vh;
-  padding: 70px 10% 0;
-  position: relative;
-}
-
-.hero-content{
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   gap: 5vw;
-  max-width: 80vw;
-  margin-top: 5vh;
+}
+
+.hero-text{
+  width: 40vw;
+}
+
+#my-pic{
+  width: 25vw;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: -10px -10px 30px -10px pink,
+  10px 10px 30px -10px lightblue;
+  animation: breathe 10s linear infinite;
+}
+
+@keyframes breathe{
+  0%{
+    box-shadow: 0px 0px 30px 10px pink;
+  }
+  25%{
+    box-shadow: -20px -20px 20px -10px pink,
+    20px 20px 20px -10px lightblue;
+  }
+  50%{
+    box-shadow:0px 0px 20px 10px lightblue;
+  }
+  75%{
+    box-shadow: 20px -20px 20px -10px pink,
+    -20px 20px 20px -10px lightblue;
+  }
+  100%{
+    box-shadow: 0px 0px 30px 10px pink;
+  }
 }
 
 #projects{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
+
+.project-row{
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  text-align: center;
+}
+
+.project-text{
+  width: 40vw;
 }
 
 .project-image{
-  width: 23vw;
-  aspect-ratio: 1/1.3;
+  width: 38vw;
+  aspect-ratio: 1/0.75;
   border-radius: 30px;
   object-fit: cover;
   position: relative;
@@ -105,9 +144,9 @@ a{
 }
 
 .project-card{
-  width: 25vw;
+  width: 40vw;
   background: #07182E;
-  aspect-ratio: 1/1.25;
+  aspect-ratio: 1/0.75;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -166,40 +205,8 @@ a{
   gap: 5vw;
 }
 
-.about-responsive{
-  width: 30vw;
-  aspect-ratio: 1/1.4;
-  object-fit: cover;
-}
-
-#my-pic{
-  width: 30vw;
-  aspect-ratio: 1/1;
-  border-radius: 100px;
-  object-fit: cover;
-  box-shadow: -10px -10px 30px -10px pink,
-  10px 10px 30px -10px lightblue;
-  animation: breathe 10s linear infinite;
-}
-
-@keyframes breathe{
-  0%{
-    box-shadow: 0px 0px 30px 10px pink;
-  }
-  25%{
-    box-shadow: -20px -20px 20px -10px pink,
-    20px 20px 20px -10px lightblue;
-  }
-  50%{
-    box-shadow:0px 0px 20px 10px lightblue;
-  }
-  75%{
-    box-shadow: 20px -20px 20px -10px pink,
-    -20px 20px 20px -10px lightblue;
-  }
-  100%{
-    box-shadow: 0px 0px 30px 10px pink;
-  }
+.about-text{
+  width: 40vw;
 }
 
 #footer{
@@ -209,8 +216,4 @@ a{
   aspect-ratio: 1/0.0625;
   margin: 0vw 2vw 0vw 2vw;
 }
-
-
-
-/*************** PROJECTS PAGE *******************/
 
